# kaipy

./: .gitignore  flake.nix  format.sh  test.sh
kaipy/: pyproject.toml
kaipy/kaipy/: IAbstractValue.py  KompiledDefinitionWrapper.py  PRGraph.py  RCGraph.py  ReachabilitySystem.py  __main__.py  kcommands.py  kore_utils.py  rs_utils.py
kaipy/src/kaipy/: AbstractionContext.py  BasicKoreUtils.py  BigsumPatternDomain.py  BroadcastChannel.py  CartesianAbstractSubstitutionDomain.py  DefaultAbstractionContext.py  DefaultConstraintDomain.py  DefaultPatternDomain.py  DefaultSubstitutionDomain.py  ExactPatternDomain.py  FinitePatternDomain.py  HeatPreAnalysis.py  HeatonlyDefinition.py  IAbstractConstraintDomain.py  IAbstractPatternDomain.py  IAbstractSubstitutionDomain.py  IAbstractValue.py  IBroadcastChannel.py  IManagedKompiledKore.py  IsTrue.py  KResultConstraintDomain.py  KResultSubstDomainWrapper.py  KompiledDefinitionWrapper.py  PRGraph.py  ParallelMatcher.py  PatternMatchDomainBuilder.py  PerfCounter.py  Properties.py  RCGraph.py  ReachabilitySystem.py  Substitution.py  SubstitutionConstraintDomain.py  TmpKompiledKore.py  TriviallyManagedKompiledKore.py  VariableManager.py  __main__.py  analyzer.py  cnf.py  kore_utils.py  predicate_filter.py  (+2 more)
kaipy/src/kaipy/domains/: BasicMapDomain.py  BigsumPatternDomain.py  CachedConstraintDomain.py  CachedPatternDomain.py  CartesianAbstractSubstitutionDomain.py  CastToKItemTermDomain.py  DefaultConstraintDomain.py  (+14 more)
kaipy/tests/: test_sample.py  testing_base.py
kaipy/tests/integration/: test_cnf.py  test_imp.py  test_toy.py
(+20 files in other folders)
